# AdsClient

./: .gitignore  AdsClient-config.cmake.in  CMakeLists.txt  LICENSE  README.md
cmake/: FindADS.cmake
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/notification/: CMakeLists.txt  main.cpp
examples/symbols/: CMakeLists.txt  main.cpp
include/AdsClient/: AdsClient.h  AdsClient_imp.h  AdsSymbol.h  AdsSymbol_impl.h
src/: ADSBase.cpp  ADSBase.h  AdsClient.cpp  AdsErrors.cpp  CMakeLists.txt  tcAdsClient.cpp  tcAdsClient.h
